DevOps-Culture-k3s-ready/DevOps-Culture/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend
  namespace: taskflow
  labels:
    app: taskflow
    component: frontend
spec:
  selector:
    app: taskflow
    component: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31000
    protocol: TCP
  type: NodePort
